--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- UIkit CSS -->
   <link rel="stylesheet" href="plugins/uikit/uikit.min.css" />
 
-  <title>FRESH FRUIT</title>
+  <title>STATIONERY</title>
 
 </head>
 
@@ -686,10 +686,10 @@
                 </h4>
                 <div class="footer-content toggle-footer">
                   <ul>
-                    <li><span>Địa chỉ:</span>12 đường Nguyễn Văn Bảo, phường 4 , TP.Hồ Chí Minh , Vietnam</li>
-                    <li><span>Điện thoại:</span>  028 3894 0390</li>
+                    <li><span>Địa chỉ:</span> 12 đường Nguyễn Văn Bảo, phường 4 , TP.Hồ Chí Minh , Việt Nam</li>
+                    <li><span>Điện thoại:</span>  036 3270 823</li>
                   
-                    <li><span>Mail:</span> @iuh.edu.vn</li>
+                    <li><span>Mail:</span> trung@iuh.edu.vn</li>
                   </ul>
                 </div>
               </div>
