--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- UIkit CSS -->
   <link rel="stylesheet" href="plugins/uikit/uikit.min.css" />
 
-  <title>STATIONERY</title>
+  <title>Văn Phòng Phẩm</title>
 
 </head>
 
